--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,9 @@ cmake_minimum_required (VERSION 2.6)
 
 project (ProjektSDiZO)
 
-add_executable(ProjektSDiZO ProjektSDiZO.cpp)
+add_link_options(-static)
+
+include_directories("src/")
+file(GLOB SOURCES "src/*.cpp")
+
+add_executable(ProjektSDiZO ${SOURCES})
